# phs_calorie_app

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SETUP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  benchmark.py  foods.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  global.css  main.jsx
frontend/src/components/: ErrorBoundary.jsx  MacroBar.jsx  MealCard.jsx  Nav.jsx  Ring.jsx
frontend/src/pages/: AddMeal.jsx  Analytics.jsx  Chat.jsx  History.jsx  Home.jsx  Profile.jsx
frontend/src/test/: App.test.jsx  ErrorBoundary.test.jsx  MacroBar.test.jsx  MealCard.test.jsx  Ring.test.jsx  api.test.js  pages.test.jsx  setup.js
migrations/: env.py
migrations/versions/: 27ef6849b285_initial_schema.py  a1b2c3d4e5f6_add_recipe_entries.py  c3d4e5f6a7b8_fix_schema_drift.py
scripts/: setup_bot.py
src/calorie_app/: main.py  worker.py
src/calorie_app/adapters/: gemini.py  prompts.py  storage.py  telegram.py
src/calorie_app/adapters/db/: models.py  repos.py
src/calorie_app/api/: analytics.py  chat.py  deps.py  logs.py  meals.py  recipes.py  settings.py  webhook.py
src/calorie_app/core/: calculator.py  domain.py
src/calorie_app/models/: schemas.py
tests/: conftest.py  test_api_analytics.py  test_api_chat.py  test_api_logs.py  test_api_meals.py  test_api_meals_upload.py  test_api_recipes.py  test_api_settings.py  test_calculator.py  test_gemini.py  test_ratelimit.py  test_repos.py  test_repos_integration.py  test_telegram.py  test_webhook.py
