[project]
name = "calorie-app"
version = "0.1.0"
description = "Telegram Mini App calorie tracker with AI-powered food recognition"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "celery[redis]>=5.4.0",
    "python-multipart>=0.0.9",
    "Pillow>=10.0.0",
    "python-jose>=3.3.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calorie_app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "S", "B", "A"]
ignore = [
    "ANN401",
    "S101",   # assert in tests
    "B008",   # Depends() in function defaults — standard FastAPI pattern
    "S105",   # false-positive hardcoded password in config field defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "N806", "E501"]
"benchmarks/**" = ["ANN", "N806", "S", "E501"]
"migrations/**" = ["ANN", "E501"]
"scripts/**" = ["ANN", "E501"]
"src/calorie_app/adapters/prompts.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.10.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0.0",
    "pytest-bdd>=7.0.0",
    "httpx>=0.28.1",
    "anyio>=4.12.1",
    "pre-commit>=3.7.0",
    "types-redis>=4.6.0",
]
